--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -67,10 +67,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("https://cdn.myportfolio.com/c6412743-e0de-4324-8de9-6a319bcf5a5c/69a0916e-e7cb-42eb-bd86-49635d40b67c_rwc_0x12x2322x3476x4096.jpg?h=0a5859e0a4cde6d66a990e66d70c0da0");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: white;
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
