--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -38,7 +38,7 @@
   --borderRadius: 36px;
   --color-snow: #FFFFFF;
   --color-grass: #3dd28d;
-  --color-dark:  #161616;
+  --color-dark: #161616;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -65,7 +65,7 @@
 }
 
 body {
-  min-height: 100vh;
+  height: 100%;
   color: var(--color-text);
   background-color: white;
   transition: color 0.5s, background-color 0.5s;
@@ -76,4 +76,11 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@font-face {
+  font-family: 'Arial Black';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Arial Black'), url('ARIBLK.woff') format('woff');
 }
