--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -64,8 +64,12 @@
   font-weight: normal;
 }
 
-body {
+html, body {
   height: 100%;
+  margin: 0;
+}
+
+body {
   color: var(--color-text);
   background-color: white;
   transition: color 0.5s, background-color 0.5s;
